RIB-103: fix sort buttons wrapping

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -424,7 +424,7 @@ h3 {
 .sort-buttons {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 1rem;
     margin-bottom: 1rem;
 }
